--- a/ansible/inventory/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/host_vars/k3s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:pDzMpAlr,iv:cGEbu9FoOWMHSwO957sS0aZyDQQ5+AogqrJSB/52L+4=,tag:0DsQA5A+XGsPLMiX26gwNw==,type:str]
-ansible_user: ENC[AES256_GCM,data:U/3ffg==,iv:Qj47lvwcSZdzpV1CADz4Aibv+cQYRkuu/9DTIGDmsFc=,tag:u188NPaEgOTGrSmxRQ3Tzw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:D3iYbfTP,iv:M6Y0ZHCwzpv6MYHOslpSTvrM5jjHGTIo+V8ch/4Ptro=,tag:clNMur/xV3Qqm8/sAdVSOw==,type:str]
+kind: ENC[AES256_GCM,data:E30p+Q/b,iv:Top1GDT9LddE9UEgZqjVtyDBxnpVpoO2LpKoAYQzQHs=,tag:TEVXvbzFqwo3OJIOEuVAaA==,type:str]
+ansible_user: ENC[AES256_GCM,data:EfSUOA==,iv:ZLJFW58DICfWcejaZ3c3o8l1xSdDRprKiXnYUDYIJp8=,tag:gLJmuUlBBAjXNuEUDhLtkQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:/Azt4Zz6,iv:yeHAAHpmV5gIa0EZmzz4dcgqB/cFaMRFjJGtUV4Pg2g=,tag:qBtuVIOiqYBaonG8mftSqg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaMTNEcVVxT3hDMmptaGtp
-            dk1GMjZ1UWp6RFg4QXRSM2p5RjF6REtON3lvCjY0czFwTm42VHJCSVFuMlJ3UFgx
-            VkZwSWlBM3crM2dyVGZmc0pyb2FmRE0KLS0tIGV0QS91TCt1dlllQXRxUXNxTk9C
-            dnQxTXZpU1Iwb1orQ2o0Vks5RS9tWEUK6HPssuWMbBGCYnUeulhXjMmMfiO0zG58
-            V7jztCmxkxVwvwkxsbwrOSUBPN0w+cFNRsClKQXpYNmBj6QyHMwVEg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1S2l2b1pwaGFOVzlOMEV2
+            NitBZ0NFVzhhcitETnZRb3JNdk00WnF3bFRrCmR2eHFpcmFLYlp2NFJidTRTbW5T
+            dlhwZFFmcmFSSGh6eTBvd2NJTEE5d1EKLS0tIHlmdUh6ZGYvWGlQWjhnQXpIUjRh
+            VyswSHBnMkY5bGlJTHZyaTVQcCtpeFUKow4Ol2kYRN27Yk/2JPKhyUSYomo/sIFF
+            PS+OyKnmzEgEl0Vt/2N6QhpK04Qw+dCXVPnaddZsNGi+yjDqxPQcEQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T12:32:48Z"
-    mac: ENC[AES256_GCM,data:4l2TP79oHiEqPY+TaVHlOueHGorjPjSKHLqU5DMHITJB2OR9v8VzYrqGUwySbWEBIGrf8ffxtRRVl+U92Gzh63RTe/83/umQZD57YXSq2y1hG1vL1H+3Rzl+ixbaEB1Ss1Mlueocd6h91+WYn2U3v51EU4bOtxUKl4A5dW5iEyY=,iv:13xfp+5S+knsTM9bYzhKHvY78kZm/Hj2hm5P56/olEg=,tag:FGfA7xsAtdchZSpKNfI3Qw==,type:str]
+    lastmodified: "2022-12-24T12:45:57Z"
+    mac: ENC[AES256_GCM,data:ZmR24NHit1a+ja/wYPtA1IBfjup4v7miU1UdUWpHs3NFcUjKGnHZs4w5boxkUvyeftsm/5meu9PL6l+sUnmTmVtiN+G43fOiRh+BgjFSr710hFvZpCMPMlbDhX208/eXYOftdHNhnRf9lFEYdcbKeu+otgt5s/JP00cuNUKzIhQ=,iv:+/a4TYDLuSWzDOmlQWuF60jPK/VHiGYk1yVIVB6AZA4=,tag:tm5ene870z5eM0EOAjGfMA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
