--- a/ansible/inventory/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/host_vars/k3s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:sD1a5oqQ,iv:bXwY9PNTFKlFg68m5612o8YrFpnx+Ug9M+aFdU3nf8o=,tag:ft/+xMZuWIC9rB8kQ85j1A==,type:str]
-ansible_user: ENC[AES256_GCM,data:A5KF3w==,iv:Og85pb5FfpfAa491jsivpNjmh000Li6vntJ2UcROhLc=,tag:ZYLUU3JRt0/Mixa6cOxx5g==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:cQhxq1FouIw=,iv:g5rqRsbs7U4DX8yQ92Rnad2svWeOf332rAsFu849oXQ=,tag:ocUBx7jDBHKLq7hf9y1ULQ==,type:str]
+kind: ENC[AES256_GCM,data:SePFOhUY,iv:MIK2bSga3RpfhF4pL2nE0IyeQtqQegR9Yp+t3/esJZQ=,tag:m9S2sjIxuWjpCiVhMIOw0A==,type:str]
+ansible_user: ENC[AES256_GCM,data:wFdsZw==,iv:oMe8t8ENw+sFZ9tKWaNfRMmG59aPnEmseEUb3HQ8s/Y=,tag:SlR2est3TKMWvvmLfSIcwQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:1it0y7o6iik=,iv:kiWOD0q//AVScSEYUzWK+GRQnr0nnkxSxtUjwX2d8AA=,tag:1P9fZ4B9om0cSTYppCrxaA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUZ2h0TFRUZ0NFMk1uMXRQ
-            dnRyQlZBaWZqVEFMTFA3Z0dSSFNCMFJXbjBVCnhqSzI2eG9nMWN1NDFFbTgzR2hJ
-            OThZMWtzR1k1a0ZNT0I3Ni9ReE0yNlkKLS0tIFNnRFVVdzlSb0JEb2VpT2ZDTnRW
-            dWZwcHFlOE5rUTdJOVMvZFNOMTExNkkKJ2yDLDFIgvuk56Gg45Js459Gdt4HxLUD
-            j52JpUWhP0S4UlLTq0Eo/8qqa+G4pf4WpJnC2R5of/6xjrVjLOUR8g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxOXFtSVI5WHppaXc5SUUy
+            SjZMMzhEMjNqK0prZVVCaFBtTUNYTlpycER3CisyTmJOU0JTWDN6YVUzc2sveXNV
+            cmdmL1IwNWRCSHRMUFhnaGpqem9KOUEKLS0tIEpsMUpCdFZCdzRwMk01Ym5nZDVt
+            d1dtWExwSlBFYmZ1ZVVXMXNhTExrZE0KaAt/AtCTlqcMi/99IXIGh8L4NNNpBRDq
+            PwYuMDQjW7M7dXPW/E9KI1JAcbBfOJkJdOXiL2U/ZL6NJsny0Y23rg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T12:32:48Z"
-    mac: ENC[AES256_GCM,data:bsmbenWUjf5QakgfRI9toqZENZSHmC7lc6g0zh1FYyMgHOpopEMU1JsfMQ0dUfmwxFtyFWFgLsLeHmcEABtqZzT7aFK62RtlZhpiQHpHimHQ0NX1Lb/a2918iu64eNxnIuKGot8GKcq26p0xlBpx/0zanI6gmXjZ95pIpFcgtfI=,iv:LJPqdr4y05NUKezRYyI9nWPl6FlLR+1XumkbfVlq5lk=,tag:NFQIrCyGOdPtEMv/8AIADA==,type:str]
+    lastmodified: "2022-12-24T12:45:57Z"
+    mac: ENC[AES256_GCM,data:xwz9avkxomP+etUCkMHHiYGx05J24zcZIFrV8INKnUCjraOl4yj3iFA/UC76mVuA2v9ulCRfMiOJy+DLy88wu5clrFvg3VIy2sPQgUSVd1rPBOLhQF4hPMH3LFt8dDO9vVAfeG6fRSDdkKuaRWSrHkJzEXaUNoAdd1iuLIY1fXE=,iv:Ne5UupiybfzPeS5TvnnhLOKU2LJoS/ITIelyqtbr9lA=,tag:3IfAikmwytB7jGgkiCz/1A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
