--- a/kubernetes/apps/home/zigbee2mqtt/app/secret.sops.yaml
+++ b/kubernetes/apps/home/zigbee2mqtt/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: home
 type: Opaque
 stringData:
-    ZIGBEE2MQTT_CONFIG_MQTT_USER: ENC[AES256_GCM,data:0zsvMQmIY8E/1ag=,iv:tdfyDutUlngH6p6qAKEOk0kCOsqdkOFXJLKaH/qsshw=,tag:pftz0tQKJotUxInPuZqqNA==,type:str]
-    ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD: ENC[AES256_GCM,data:+GY8jxdWd8CR,iv:gJ4kmxwM8k2JjIgOchy1vcY351JhltNSL/0R4fdBGZM=,tag:UiQ+ZZIYLsHMQEI+Wv7Sug==,type:str]
+    ZIGBEE2MQTT_CONFIG_MQTT_USER: ENC[AES256_GCM,data:4qmekwj6zhZZW/A=,iv:iecooAQqpp5f0fJAPRCAVy+qh6zs+PM5acTlyclfBVA=,tag:gM83dLSi7q2Ok+AmdkKSfA==,type:str]
+    ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD: ENC[AES256_GCM,data:CRV4rQ0gAWlO,iv:2u1gVaTbD7S83ZPG7o7limjE9V01vHJ50Nf/45Z+IyU=,tag:N9LEP2X/DBk52Yi0NcxxVw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGMlRzK0EvaExhcWRPVCtN
-            WUZBUWF3YTkzK3ZadlhOVEZjb3UremxUSTBJCk5uK25RZ2xxOVFLMnRJdThQWnlj
-            dFdKdGIrOGZYQzBGOUdneGhYNWZHVUkKLS0tIG9RSVVwTHcrNlA1Zm9ZNVZZQ3pU
-            L3RDK3UrMlpFRkl3ZmpsRkc2bS8zNmcKVlF9xTzWIjumZO0Gs1vghaYCMpDg6RiN
-            BLoqv1NFazEMjB+kRbvn/4PbJv+nR5EtWp221MiHlWdDFm6+fBy1pA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5SUc3VkxHMDRXSFFxdlZw
+            ZzBlL1J4M0lHMjlqYW9TcW5uLzNTM3hLd1V3CmtQYi9XZllNWmRiaG9UREI2Ylo5
+            RWxMKzMwWXFaejBDMTMvYlk5VUxlTmcKLS0tIForNDNWd3dIVnR0azFxOTUxa2I5
+            Y0dud1Vvc0hWWUo2Z3g0RHQ2RFlyV0EKRkkROdZW6ldLgD9gbT2CK4RGfjTcwcwv
+            aPBAuCzrGSKKcl2rQGwe+W+Yaat63ZIBGDUd5PUuJbXHKsyIsLGL6g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T12:32:48Z"
-    mac: ENC[AES256_GCM,data:jRq+Dkfl/e706HVhC61dQtIguLYyNtUt7Uk+dMfxfFH1X77wHygddGttbY9JDiAFXh4jBqQdyq+Tb1UtMJE+owQ5pt6eAYjG0KgYyNoPPoTeqRQgjbsjYN64LiOhbUnByiHFJPRNY1ddpXw7oNwvjXxpw28imrYLNpEysJ9LIXo=,iv:C39nUVTcFBVowqEqfx39v1Ab3XScoaCc3QDule2smPc=,tag:wMEXG3IwsJLqYTHcAezzpg==,type:str]
+    lastmodified: "2022-12-24T12:45:57Z"
+    mac: ENC[AES256_GCM,data:skNiv9+f+8pRnTYhEhdt7IUcxpU4xpq/b555RYDWxSPveR+SVJWP+cvHTQkNa7O6g8Ead01D675YG7Hwy8JVHdJCUhRQqGywPVeQHy0JsPTNnxG27gAEyljDvE+9MyKKVR5tS3SJ2s7plUAKiASH0V/xzBnkiExhPWiX3pHtvaY=,iv:85LbaDrKju7tEPlN7ADLNXt8BB1sVVHfqog/fWe3SjI=,tag:/EOwOrTOwmQtJ+YQXAfhcQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
