--- a/kubernetes/apps/longhorn-system/longhorn/app/secret.sops.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/secret.sops.yaml
@@ -4,10 +4,10 @@ metadata:
     name: longhorn-backup-secrets
     namespace: longhorn-system
 stringData:
-    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:TVEEC5FZvXRFzOFa6p3gCZJ7Pvk=,iv:bZBuKjUVLmC43IfJrI3WSTqH+YEHFqinZug/0egp71E=,tag:JCLZJewjcQVHhTjUqUSg8g==,type:str]
-    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:dvR5qiTclL8cPOajHui++Ly/Yh2mqz+YsL9gxKjo0o7kfoJlmxo+Iey2vw==,iv:+AD69ywyFw7RvOTulxSqvcrXN9TnkehZM3dM3oSlgiM=,tag:0P7/TYzrkP35hNPXgs7QpA==,type:str]
-    AWS_ENDPOINTS: ENC[AES256_GCM,data:InsOeUb/GJM0YpjIbAXzhRVd8n7/Dzthug4Ii2qRu94ehUY=,iv:Ud8hRjH9+Tn+ptY5WU+TFC69Rfk3Or75pGqR5dT5/as=,tag:ricJyypc6VkVt1BQsbpY4Q==,type:str]
-    AWS_REGION: ENC[AES256_GCM,data:p3HFMQ==,iv:mgeIp8fZYB+g94PQ1iZaEFldVbwDFbYI5/FJqrlmvH4=,tag:JNS3hSK4YDgoVMcrvrg24Q==,type:str]
+    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:/8/Otz+ZDHhvj9s0a4L+VXgIYQo=,iv:/Hmkch/E7RYVgYqChw66Z20iWhqtR7AAeGzASnRRmYg=,tag:NkcYu0z4fCCvEqmHqZaxvQ==,type:str]
+    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:NZktqXoEBk5+s6mpp/cwKGS6njmL2E8dgRftDnoOu169chGBk7g983P3NA==,iv:dEYwoj/cMUKWaqnfc94KXaxH/nJcFqqQPa/DV8QCM6I=,tag:njKSGmKV0G+OYSv24Z4HKA==,type:str]
+    AWS_ENDPOINTS: ENC[AES256_GCM,data:yxKOKGXDGXFeTB1ltTvHMGlDnOsBczsyGGmQneMwm51mrVE=,iv:AiOPicXTsC5HJJI/P+RO0AYv/LICwXaoNZtG4gVbtw8=,tag:2aeuh2aUWAZ6Movhdwen7w==,type:str]
+    AWS_REGION: ENC[AES256_GCM,data:enJnLA==,iv:BA8WnzTJoEJ6Fq75EoX2jIAwDz6dMIlRmFFjS80Iqs0=,tag:8fcSfjUmcZWA7RW9brcXpQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDZU42MmRWdHJybk1jQmxw
-            MlpETktxZkhtZmtaejJkem1vb0F4Y1Z6RXhvCkJRYUNUd3RabGZLMnNGU3NJUkdM
-            Y29kU3RZSzZ5RVpzQ2RlcHBwelptaFEKLS0tIG1NVndQR2tRTTVMZjc4TklYdHpX
-            bzRwdUY1Yk9KODBCSUhZV2tyaFZuWDAK4gCyEbGGjfxp6AstZNp4DhkB6TaPS2GL
-            0X19r3SCKPGgwEvyORNmrwixnV6km0NXEOy/d4aDPyNlNm4dxuuKtw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjQnNmdDh6QzR3cEhWRSt5
+            Z2tFYUtmMEx0M2hETk9kempSaTVnVW1MUDF3CkZQSDcvU0d4U2VodWNEdEgyT1VE
+            S0paUm5ZUndjeHFQcEpMUXlJN1pwdWsKLS0tIFp6N1BTRFZ6TTFSVTU1QzJBNThV
+            bDJhdUcvaDVGaWE0UFlxMVBmK3d3RnMKqRO1vkZ73lESZ2p1Y3yX6e7Qd5AQwCbL
+            uxaUqGOgUynBeUOUG8R4pC+M9C7xukiW4BTboPUqO6D7ruAtrod/4A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T12:32:48Z"
-    mac: ENC[AES256_GCM,data:8zTAs8rf1T3rAg56bVn74T4QYXAa0kMz0jMawdMg3FfXS+gOLyxmjlMD8ZnlorHsallCG/5YWnK8omSonwphIIhlIeeipFAbCpR0HR8pLMR2vjy0z1H2Or6tLSLbpgIL4YTRaUOobhbVFzw2Lo6VRuLA6UxKwkkJcZ+/OTuOyaY=,iv:pfD/vBebqJRLW/H9LDoWnbihFTOisGNNbkTJooGgtgI=,tag:jnHNIQruLVtElg438ukRng==,type:str]
+    lastmodified: "2022-12-24T12:45:57Z"
+    mac: ENC[AES256_GCM,data:5BoaX5h+gXJaRcmFB32QcOoZzi0XsCnddLjJ36TqpSXp/v4nvHnezIuuyKFbLH6X093B6flXjkPElOPbYV4CNfX/6QwEAjYuvh4Imi1KJDUaAl7CQgHcLAK5KtvfrimiSp/zM/KrdKa+E5AWR4//qlViUfFhlGBAiGj4S2rIs2Q=,iv:1mQ38oF3WPY6gN0wVV2o5KVDv75AERwLmDknN91VV8c=,tag:WZ6rTeKFZGmd+AErKKd2Kg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
