--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,16 +4,16 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:HK05JY7lXA==,iv:EJYi4771SukrDm/bvYuE7MWnrY8eFasMlhZdVtUPnXM=,tag:gBLIdl/9h1y5MKJzR11dCA==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:O06syzygoqoIEww06+RRbnFaoAHKuVWGeBYgjZI=,iv:SEPcD+h2pUbO3qvz6HVnGWcuoGsO0JMtDZZo2MHj95k=,tag:m6BLLLx5j3EDbvJ+MkOvxw==,type:str]
-    SECRET_ZIGBEE2MQTT_DEVICE: ENC[AES256_GCM,data:C+PeC19LZsBKdhpyWNI5H9qYXZfMDdVvddhLWa374hfqfkDEAAH7oitiRWT3ei/oNphwogNNxcxzveW/gAA03Z1SSy4pEpF8WvXqlvHqo+M9vQBqRSoy,iv:3rPol7kzlYdW0gJiaRXBfWvEsQ4G897GAxDKGIgmb4w=,tag:QReBtRPj+tnwAL7rjTP5nQ==,type:str]
-    SECRET_VELERO_BUCKET_REGION: ENC[AES256_GCM,data:/moVtA==,iv:8i8OlKnj2IHijGUMzuM42LZvOaa/h5wWdaif87mdNWo=,tag:g5Wzu63iPSZ2zkP8R7vdSw==,type:str]
-    SECRET_VELERO_BUCKET_ENDPOINT: ENC[AES256_GCM,data:CAhsHHV3DQlleErCTFTjN0Uxs5u4+doOGLS1AY28PVycX8Y=,iv:xbd0SLM2ztgaXQqo8C3NrXTYGSdyN1c9nnnbrtZJT3Y=,tag:cJmiJA5e2bG0eR46kCIwtg==,type:str]
-    SECRET_VELERO_BUCKET_NAME: ENC[AES256_GCM,data:5g1KK60T/NfWBQ/j95tu/w==,iv:MLcPeW/OSqU3T+kFp/z/087kqtsKyxHFtMavMeJ+hnI=,tag:Q6goGRhQvbDFwy3e1+prng==,type:str]
-    SECRET_LONGHORN_BACKUP_TARGET: ENC[AES256_GCM,data:OopFqrlh6v1MhcpXK3YCg2oZoCEcXXME4Q==,iv:0BTd5tiNy95WcZHyYjxc87uS2HTLAZgw9+oqIPsE59M=,tag:GUv94jYAFKGEPVVEAUXzGw==,type:str]
-    SECRET_CLUSTER_CD_TUNNEL_ID: ENC[AES256_GCM,data:QDyoTV8pJKgtbkwVG9sRCPnay9PXKZ4uqcvNo8r3R5WuJWOB,iv:7bU24dWLNJ2Gq9rUClHH2vONtYKzNHgKIkP79wqFdX0=,tag:thBM4MVxRldaJOfBLlLmtg==,type:str]
-    SECRET_CLUSTER_SELECTOR: ENC[AES256_GCM,data:WRy+cWg2XV/Cw/RiLf6eZcjvvYmMjVpooXlBXyU=,iv:eVMAynrx36VqF1+IceXg8QN5lUi8pNug0gIQG1mGYF0=,tag:I7AMP45yMJ2VTLX9heI0dQ==,type:str]
-    SECRET_EMQX_ADMIN_PASSWORD: ENC[AES256_GCM,data:t9ZDEMteNKk6,iv:wsr+hJ5TSe2knMeqlestd+UojM61GjDaZiuHSpACNh8=,tag:c6P4CZw0LhmzHFzzpjT3OQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:io2LG60gtQ==,iv:i5FFR2tQX6DxGygGvMdt8WP53N66gOn9z4TJXxl1axA=,tag:zRT5XQ5V5b17eYaIkLi+2g==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:1SLQWFXU/Gld+Gl6H+yAzW3IhcLHpGLZBO4D+90=,iv:R+fmExI7+E7bB7GA8rlACdcknJrBk7NYyeG7wfoNJaY=,tag:/014PiquDVUH93nj55SxjA==,type:str]
+    SECRET_ZIGBEE2MQTT_DEVICE: ENC[AES256_GCM,data:xxtTgufJ//81B3KMWVEeM4wjlvzFERFr/1EKS6izQOVjD9SdOhX55+bhc5Mef6LuR3eMws1NEc/7Fw8WjVomqi/KS8bhEztwm5WxlYhcx73eM8LCAMYn,iv:7KoCpUXyM+7NjaWBZC+anhrZy1xbX55bNmMxoVYICOI=,tag:RES2705ukiuLIV2srrJQVg==,type:str]
+    SECRET_VELERO_BUCKET_REGION: ENC[AES256_GCM,data:g+CtGg==,iv:91rSs3E7/MDsuHC4e04Zr+/Nx9V0xSh/+bjbDvJWRZk=,tag:7SkhQnDfIFxKlVr0nbCOCw==,type:str]
+    SECRET_VELERO_BUCKET_ENDPOINT: ENC[AES256_GCM,data:8NtFaeQljQF0mVHXTjKuyzd8vgAO8y49Z7sykxDA1Iq7jT4=,iv:Jgp1M+xCvPlqf7MrLUycfluUMz3FxCka2B4RCGPBrk0=,tag:qASrz2a/c8HCHCgjJmhTzA==,type:str]
+    SECRET_VELERO_BUCKET_NAME: ENC[AES256_GCM,data:e8ZbAmgNi+wPLyI2mwpbeg==,iv:AyBO926UEt08uRKm2NiEjvHeERwzu6VEsv54OiFAvz8=,tag:+KeMIiQxdxrz3gf5MaD8QA==,type:str]
+    SECRET_LONGHORN_BACKUP_TARGET: ENC[AES256_GCM,data:wlWRBC6FVwvBmV+ARVVOTzOGe1WzBuD1dQ==,iv:57zh+Hn+LzzEPjeBtWNNv97UCIArEb+XlfUeSbozXsY=,tag:Oc9seLakfS5QMy6UPvYfYg==,type:str]
+    SECRET_CLUSTER_CD_TUNNEL_ID: ENC[AES256_GCM,data:1IQt850Iqns1EkVT4gOYVEjMeiBh8LJmirQu1lSIn2P8uYOS,iv:cir2PQUGh3yM3QnMC4fYfEYV9kuOMmXtwnabFaJbhz8=,tag:7j+zrnF3M07o9p5NMJFByw==,type:str]
+    SECRET_CLUSTER_SELECTOR: ENC[AES256_GCM,data:NMblbMqMEVk/IFb1lEE5IQa7RL4mvCl6gl6lkrY=,iv:OAAs1xcBVbn7Lu6Kb4ThT5wfP74ra8fEm1bYP23cZlc=,tag:RimhQFgjEdwXQUJnhmYgeA==,type:str]
+    SECRET_EMQX_ADMIN_PASSWORD: ENC[AES256_GCM,data:N5jhFMGsHdfU,iv:CkI9TgF3FmWNaWewDJWCtr8XJyFwCHKwD1yARl6PYIQ=,tag:cTcEXt7rPTfzRyh6xZBllQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,14 +23,14 @@ sops:
         - recipient: age16vaszxd76tm04yml3andpjshumnnzzugfhagw0l8q42cw3d8q3fs0vy6d0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCTFFhdk5ncmx0UXB5OHVi
-            SmpKeElpakNLYUE5bDZ1bG5KbmpIcG5mYUZVCkxJck9QYXVBeVYxd2lPaVRpS2cz
-            MFBXZEtWRnlNb3Z0R3lHcTZLRnZWeU0KLS0tIDBIamREbmJVemJ1NjVjcUtJQ3cr
-            dnZldENxWmRUWkVDTDBjbVZvNGIvVW8KG2PeyuuaJbFFKEOOvlhEHHVqptNeWHbp
-            e415M0bmodfVqoUA7fgHKFM03IJpm0tIgbIk4LHgV/amxhpRaEVfpA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFQlZYemJpZnk5Q3hmcWMy
+            aFM1RnhqQUVSbTA0NTVXY1pOOEJsMWRXSlMwCit2SFlPUlNzeklwVE4xdE52eThj
+            aDQ3L0lWaXV1NVpzRk5TOUNDZ05yN2sKLS0tIGptZVZFY1dCWnlMS3JEazRkenpW
+            MFlFYWx4ZjNscWc3V2F0Z1FMM2NwUncKJ5sTfYQHvwwalq1CTgxYiMDUTdYlmrUy
+            nQ9sxWInUHisDaF8OsSgMGs/mJror4sFTuFJtDUb+usLYJZC1Rl/hA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T12:32:48Z"
-    mac: ENC[AES256_GCM,data:sKYMmTrIRMNHbWhhHotzpH9FDZrUihxfm055LF0Q3HhIUT63GQ1W15NVNNGhhX9S8s1MfQK3DXp6cxqflfHNzMl5mNzCjfngwutQ1aVOeud0O1vTV0SPNyGfRJdDt6tN7uMeGZ495cZ1BBMnfx3ZVjbqOyQn7csWJ6FFjLB3iFk=,iv:P0aFmMPCPSxkTgQCekRAQHac8ZAz3sadJeUUYfUmSH4=,tag:Y76FT/PFEtDrfW1hBe3nJw==,type:str]
+    lastmodified: "2022-12-24T12:45:57Z"
+    mac: ENC[AES256_GCM,data:Xzu/YIQfch28+iMIcX8LoYp8oCh27SItd8HEHa0rHbLcJE/UvCYbAOlMWfbXv3EB40t34hNxyhGZmoG3ri4JQkp/2nKAptmqKXEdUBffAt8jGxjOvYNONjhEytfV5YYuJStNTehxFEALyjgic1zuS+ZeSjqSuZ/el6EbwsN5bCM=,iv:V/E126aXMcYvikZ1thaom52+RN5a1n6wrd+uUFJKLaY=,tag:BoY0Gb4zibH2+xGelEeecA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
