--- a/kubernetes/apps/home/emqx/ks.yaml
+++ b/kubernetes/apps/home/emqx/ks.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/kustomization_v1beta2.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
@@ -8,7 +9,6 @@ metadata:
     substitution.flux.home.arpa/enabled: "true"
 spec:
   dependsOn:
-    - name: cluster-apps-metallb
     - name: cluster-apps-longhorn
   path: ./kubernetes/apps/home/emqx/app
   prune: true
@@ -18,30 +18,6 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: emqx
-      namespace: home
-  interval: 30m
-  retryInterval: 1m
-  timeout: 3m
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-kind: Kustomization
-metadata:
-  name: cluster-apps-emqx-core
-  namespace: flux-system
-  labels:
-    substitution.flux.home.arpa/enabled: "true"
-spec:
-  dependsOn:
-    - name: cluster-apps-emqx
-  path: ./kubernetes/apps/home/emqx/cluster
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: home-kubernetes
-  healthChecks:
-    - apiVersion: apps.emqx.io/v2alpha1
-      kind: EMQX
       name: emqx
       namespace: home
   interval: 30m
