--- a/kubernetes/apps/home/emqx/app/secret.sops.yaml
+++ b/kubernetes/apps/home/emqx/app/secret.sops.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: cluster-secrets
+    name: emqx-secret
     namespace: flux-system
 stringData:
     admin_password: ENC[AES256_GCM,data:RnKYvsD/SdU3,iv:joMKib/NbmQDtddsZBiFF6YiYfxtkEfYXSoCAEkigCg=,tag:abmn/riaFhsdy5j/wUaL7g==,type:str]
@@ -20,8 +20,8 @@ sops:
             UXlORUFFUjNvdlJReDZVeUpjNzRGWU0KaJH7xLFzkfz+qlBw9TIUaeR8o8ZQACk3
             mDKTX9zQ0fRXZ408WmvK0C1yygew659XGeQG6oyj1Mb5NzdYeg8mJw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-24T12:45:57Z"
-    mac: ENC[AES256_GCM,data:fX8qUm8ILyjuUi09kIV88oyvcMteFCaIoRv4nxqf9BoS3gXkQNmT52mbk6k3sM2B7emmKUE7i936gXZYg6YzXU++OnqBzqrEK1LhpNBTlNeV+fPWjzVDygbijmyJHx3zys/uXOHgLA0k3uSci8UiE7vy16jwb8zPesahxIiwpzc=,iv:wp5Z/i3ws3sZ8127RhlNi+6p3ZlMPmkBfPVx6FLUAJU=,tag:HbTOJ8uen7DlS85aNWETug==,type:str]
+    lastmodified: "2022-12-24T13:02:00Z"
+    mac: ENC[AES256_GCM,data:rAfL0kt3muZiyYv5jtkPDjSrRCLXCnDUW9WU8Thp7DC2RoqeebwcbGcsfa5qyM7ZbMt49stJr68roIPJQ9LdcQmbzJr6j2tukANinw8iJDr0AMQHniNlmT1n6+gfL6c/VTH6B+suh21f0FGQlGiZghEtsTp2JjkqST+Fl+iQqEc=,iv:/U4xTSNYbA34m4repNCDkD08OnTQvrYAoQOxBCDtBe4=,tag:iHuMciOL68oQlGeLLhUq6w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
